--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: common_sdk
 description: Common funcs, widgets...
-version: 0.1.0+4
+homepage: https://bloclibrary.dev/#/?id=sponsors
+version: 0.1.0+6
 # publish_to: none
 
 environment:
@@ -10,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_image_compress: ^1.1.3
   intl: ^0.17.0
 
 dev_dependencies:
